# lawboi

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/skills/test-local/: SKILL.md
api/: Dockerfile
db/: schema.sql
db/migrations/: 001_source_global_id.sql  002_conversations.sql  003_answer_cache.sql  004_provision_heading.sql
docs/: answer-flow-sequence.md  app-architecture.drawio  deploy.md  phase-0-foundation.md  phase-1-mvp.md  phase-2-trusted-assistant.md  phase-3-expansion.md  phase-4-scale.md
docs/superpowers/plans/: 2026-03-31-eesti-oigusabi-mvp.md  2026-06-06-lawboi-architecture.md  2026-06-15-dev-script-python-rewrite.md  2026-06-26-code-quality-refactor.md
docs/superpowers/specs/: 2026-03-31-eesti-oigusabi-mvp-design.md  2026-06-06-lawboi-architecture-design.md  2026-06-15-dev-script-python-rewrite-design.md  2026-07-07-corpus-ingest-concurrency-design.md
eval/: gold_set.json  retrieval_eval.py  retrieval_gold_set.json  run_eval.py
scripts/: corpus_dump.py  dev.py  probe_rt.py  smoke_local.sh
src/lawboi/adapters/: _util.py
src/lawboi/answer/: citations.py  moderation.py  prompts.py  service.py
src/lawboi/api/: deps.py  errors.py  main.py  (+2 more)
tests/lawboi/: fakes.py  test_fakes.py
ui/: .gitignore  Dockerfile  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: AnswerContent.tsx  ChatInterface.tsx  EmptyState.tsx  ModelSelector.tsx  SourcePanel.tsx
ui/lib/: api.ts  citations.ts
(+61 files in other folders)
